--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1>BISHOP HEBER COLLEGE (AUTONOMOUS)<br>DEPARTMENT OF DATA SCIENCE</h1>
             <p><br><b>A STATE LEVEL TECHNICAL SYMPOSIUM</b></P><br>
 
-            <a href="https://forms.gle/zfd6x5RcjW5VZvCd7" class="hero-btn red-btn">Click here to register!</a><br><br>
+            <a href="https://forms.gle/RWFmrnXjeng7tWxQ7" class="hero-btn red-btn">Click here to register!</a><br><br>
                 
             <i class="fa fa-calendar"></i>  MARCH 8, 2025</p>
     </section>
