--- a/event.html
+++ b/event.html
@@ -70,8 +70,10 @@
     <h4>About Us</h4>
     <p>Bishop Heber College, A great Institution of higher education set in beautiful surroundings, seeks to function through mutual love and respect and with efficiency and creativity, <br> catering to the educational needs of all, especially the poor, the needy and the under-privileged, inspired by the love of our Lord Jesus Christ.</p>
     <div class="icons">
-        <a href="http://instagram.com/heber_datascience"><i class="fa fa-instagram"></i></a>
-        <a href="mailto:analytixfest2k24@gmail.com"> <i class="fa fa-envelope"></i> </a>
+        <a href="https://www.instagram.com/analytix_fest?igsh=MXd2eDB0ZTA3MjFraQ=="><i class="fa fa-instagram"></i></a>
+        <a href="mailto:analytixfest2k25@gmail.com"> <i class="fa fa-envelope"></i> </a>
+        <a href="https://www.linkedin.com/in/department-of-data-science?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"> <i class="fa fa-linkedin"></i> </a>
+
     </div>
 </section>    
   
