--- a/non_tech.html
+++ b/non_tech.html
@@ -26,7 +26,7 @@
 <!--------Technical-->
 <section class="allevents">
     <div>
-        <img src = "Pictures/non_technical.png" class = "event-image">
+        <img src = "Pictures/non_technical.jpg" class = "event-image">
     </div>
 
 </section>   
