--- a/tech.html
+++ b/tech.html
@@ -27,7 +27,7 @@
 <!--------Technical-->
 <section class="allevents">
     <div>
-        <img src = "Pictures/technical.png" class = "event-image">
+        <img src = "Pictures/technical.jpg" class = "event-image">
     </div>
 
 </section>   
