--- a/event.html
+++ b/event.html
@@ -42,7 +42,7 @@
             <a href="https://www.youtube.com/c/EasyTutorialsVideo?sub_confirmation=1" class="hero-btn red-btn">EXPOLER NOW</a><br>
         </div>-->
         <div class="about-col">
-            <img src="Pictures/event_list.png">
+            <img src="Pictures/event_list.jpg">
         </div>
     </div>    
     
