--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <img src="Pictures/back_img.png" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="Pictures/event_rules.png" class="d-block w-100" alt="...">
+                    <img src="Pictures/event_rules.jpg" class="d-block w-100" alt="...">
                   </div>
                  
                 </div>
